fix unwanted scrollbar in explore page (#14097)
(cherry picked from commit 59b048a9aeb4862401972eed32743f8fa9e21ced)

--- a/openmetadata-ui/src/main/resources/ui/src/components/ExploreV1/exploreV1.less
+++ b/openmetadata-ui/src/main/resources/ui/src/components/ExploreV1/exploreV1.less
@@ -21,6 +21,7 @@
     padding-right: 0 !important;
     background-color: @white;
     border: 1px solid @border-color;
+    border-right: none;
     border-radius: 0;
     padding-left: 0 !important;
     border-top: 0;
@@ -53,6 +54,7 @@
     }
   }
   .summary-panel-container {
+    overflow: hidden;
     height: @explore-page-height;
     .ant-drawer-header {
       border-bottom: none;
